3_gateway/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-ingress
  namespace: gateway
spec:
  selector:
    app: edge-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-ingress
  namespace: gateway
spec:
  selector:
    app: internal-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
